# computer-graphics

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  generate_all.sh
input/l_systems/: 32_segment_curve_stoch.L2D  bush_stoch.L2D  grass_stoch.L2D  koch_curve.L2D  koch_stoch.L2D  l_systems027.ini  l_systems028.ini  plant_stoch.L2D  pythagoras_tree.L2D  stoch_l_systems001.ini  stoch_l_systems002.ini  stoch_l_systems003.ini  stoch_l_systems004.ini  stoch_l_systems005.ini  stoch_l_systems006.ini  stoch_l_systems007.ini  weed_stoch.L2D
input/line_drawings/: line_drawings027.ini
src/: 3DFigures.cc  3DFigures.hh  Line2D.cc  Line2D.hh  color.cc  color.d  color.hh  draw.cc  draw.d  draw.hh  easy_image.cc  easy_image.d  easy_image.hh  engine.cc  engine.d  figures.cc  figures.d  figures.hh  ini_configuration.cc  ini_configuration.d  ini_configuration.hh  l_parser.cc  l_parser.d  l_parser.hh  projection.cc  projection.d  projection.hh  vector.d  vector.hh
